# ocelchor

./: .gitignore  README.md  generate_fig4.py  pyproject.toml
ocelchormodel/: .gitignore  README.md  pyproject.toml
ocelchormodel/data/input/: 0x06012c8cf97bead5deae237070f9587f8e7a266d_uniqueFunction_ocel.json  0x9c8ff314c9bc7f6e59a9d9225fb22946427edc03_uniqueFunction_ocel.json  0xb1690c08e213a35ed9bab7b318de14420fb57d8c_uniqueFunction_ocel.json  0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d_uniqueFunction_ocel.json  0xd9e1ce17f2641f24ae83637ab66a2cca9c378b9f_uniqueFunction_ocel.json  beanstalk_attack_ocel.json
ocelchormodel/src/ocelchormodel/: __init__.py  __main__.py  bpmn.py  cli.py  extractor.py  layout.py  model.py  validate.py
ocelchormodel/tests/: conftest.py  test_bpmn.py  test_cli.py  test_extractor.py  test_integration.py  test_layout.py  test_reader.py  test_validate.py
ocelchormodel/tests/data/: 0x55_truncated_ocel.json  0x5e_0xcd4_ocel.json  0x5e_truncated_ocel.json  beanstalk_attack_ocel.json  swap_1_ocel.json  swap_3_ocel.json  swap_multi_tx_ocel.json  swap_root_only_ocel.json
ocelchorvalidator/: .gitignore  LICENSE  README.md  pyproject.toml
ocelchorvalidator/data/input/: 0x00000000219ab540356cbb839cbe05303d7705fa_uniqueFunction_ocel.json  0x06012c8cf97bead5deae237070f9587f8e7a266d_uniqueFunction_ocel.json  0x323a76393544d5ecca80cd6ef2a560c6a395b7e3_uniqueFunction_ocel.json  0x556b9306565093c855aea9ae92a594704c2cd59e_uniqueFunction_ocel.json  0x5efda50f22d34f262c29268506c5fa42cb56a1ce_uniqueFunction_ocel.json  0xb4e16d0168e52d35cacd2c6185b44281ec28c9dc_uniqueFunction_ocel.json  0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d_uniqueFunction_ocel.json  0xd90e2f925da726b50c4ed8d0fb90ad053324f31b_uniqueFunction_ocel.json  0xd9e1ce17f2641f24ae83637ab66a2cca9c378b9f_uniqueFunction_ocel.json
ocelchorvalidator/src/ocelchorvalidator/: __init__.py  __main__.py  cli.py  constraints.py  index.py  reader.py  report.py  stats.py
ocelchorvalidator/tests/: conftest.py  test_cli.py  test_constraint_c15.py  test_constraint_c16.py  test_constraints_c0_c4.py  test_constraints_c11_c14.py  test_constraints_c5_c10.py  test_index.py  test_reader.py  test_report.py  test_stats.py
ocelchorvalidator/tests/data/: swap_2_ocel.json  swap_multi_tx_ocel.json  swap_root_only_ocel.json
ocelchorvalidator/tests/expected/: cli_and_integration.md  constraint_c15.md  constraints_c0_c4.md  constraints_c11_c14.md  constraints_c5_c10.md  reader_and_index.md  stats_and_report.md
trace2ocelchor/: .gitignore  LICENSE  README.md  pyproject.toml
trace2ocelchor/data/input/: 0x00000000219ab540356cbb839cbe05303d7705fa_uniqueFunction.json  0x06012c8cf97bead5deae237070f9587f8e7a266d_uniqueFunction.json  0x323a76393544d5ecca80cd6ef2a560c6a395b7e3_uniqueFunction.json  0x556b9306565093c855aea9ae92a594704c2cd59e_uniqueFunction.json  0x5e_cd49912.json  0x5efda50f22d34f262c29268506c5fa42cb56a1ce_uniqueFunction.json  0x9c8ff314c9bc7f6e59a9d9225fb22946427edc03_uniqueFunction.json  0xb1690c08e213a35ed9bab7b318de14420fb57d8c_uniqueFunction.json  (+5 more)
trace2ocelchor/tests/: conftest.py  test_cli.py  test_integration.py  test_ocel.py  test_parser.py  test_transformer.py
(+27 files in other folders)
