[project]
name = "ocelchor"
version = "0.1.0"
description = "BPMN choreography mining pipeline for Ethereum transaction traces"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "trace2choreo",
    "ocelchormodel",
    "ocelchorvalidator",
]

[project.scripts]
ocelchor = "ocelchor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocelchor"]

[tool.uv.workspace]
members = ["trace2ocelchor", "ocelchormodel", "ocelchorvalidator"]

[tool.uv.sources]
trace2choreo      = { workspace = true }
ocelchormodel     = { workspace = true }
ocelchorvalidator = { workspace = true }
