[project]
name = "ocelchormodel"
version = "0.1.0"
description = "Mine BPMN choreography models from OCEL 2.0 choreography event logs"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
ocelchormodel = "ocelchormodel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocelchormodel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ocelchormodel"]
branch = true
omit = ["src/ocelchormodel/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
