[project]
name = "ocelchorvalidator"
version = "0.1.0"
description = "Validate OCEL 2.0 choreography logs against formal constraints C0–C15"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
ocelchorvalidator = "ocelchorvalidator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocelchorvalidator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ocelchorvalidator"]
branch = true
omit = ["src/ocelchorvalidator/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
